--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,49 @@
 # version: "3.2"
-# services:
-#    nginx:
-#        container_name: nginx
-#        image: nginx:1.17.8
-#        ports:
-#            - 80:80
-#        volumes:
-#            - ./config/nginx/site.conf:/etc/nginx/conf.d/site.conf
-#            - ./php_app:/php_app
-#        networks:
-#            - docker_rede_docker
 
-#    php_app:
-#        build: php_app
-#        container_name: php_app
-#        volumes:
-#            - ./php_app:/php_app
-#        networks:
-#            - docker_rede_docker
+# services:
+#   php:
+#     image: phpmyadmin
+#     ports:
+#       - 9001:80
+#     environment:
+#       PMA_HOST: "mysql"
+#       MYSQL_USERNAME: root
+#       MYSQL_ROOT_PASSWORD: root
+#     networks:
+#       - docker_rede_docker
+#     depends_on:
+#       - mysql
+
+#   mysql:
+#     image: mysql:5.7
+#     command: --default-authentication-plugin=mysql_native_password
+#     ports:
+#       - 3309:3306
+#     environment:
+#       MYSQL_ROOT_PASSWORD: "root"
+#     volumes:
+#       - ./mysql/:/var/lib/mysql
+#     networks:
+#       - docker_rede_docker
+
+#   nginx:
+#     container_name: nginx
+#     image: nginx:1.17.8
+#     ports:
+#       - 80:80
+#     volumes:
+#       - ./config/nginx/site.conf:/etc/nginx/conf.d/site.conf
+#       - ./php_app:/php_app
+#     networks:
+#       - docker_rede_docker
+
+#   php_app:
+#     build: php_app
+#     container_name: php_app
+#     volumes:
+#       - ./php_app:/php_app
+#     networks:
+#       - docker_rede_docker
 
 # networks:
 #   docker_rede_docker:
@@ -35,7 +61,7 @@ services:
       MYSQL_USERNAME: root
       MYSQL_ROOT_PASSWORD: root
     networks:
-      - docker_rede_docker
+      - library-network
     depends_on:
       - mysql
 
@@ -49,7 +75,7 @@ services:
     volumes:
       - ./mysql/:/var/lib/mysql
     networks:
-      - docker_rede_docker
+      - library-network
 
   nginx:
     container_name: nginx
@@ -60,7 +86,7 @@ services:
       - ./config/nginx/site.conf:/etc/nginx/conf.d/site.conf
       - ./php_app:/php_app
     networks:
-      - docker_rede_docker
+      - library-network
 
   php_app:
     build: php_app
@@ -68,9 +94,8 @@ services:
     volumes:
       - ./php_app:/php_app
     networks:
-      - docker_rede_docker
+      - library-network
 
 networks:
-  docker_rede_docker:
+  library-network:
     driver: bridge
-
